--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Andoid Application Development lerner</h3>
-              <div class="subheading mb-3">Andoid|Google</div>
+              <h3 class="mb-0">Android Application Development lerner</h3>
+              <div class="subheading mb-3">Android|Google</div>
               <p>It's help in boring day, when nothing are going in your favour then andoid comes in the picture, to explore your creativity and find the solution how its work,what's going in background, how to improve it. more familiar, ctrl c ,ctrl v with google !!.</p>
             </div>
             <div class="resume-date text-md-right">
